# aif-c01

./: .cljfmt.edn  .envrc.sample  .gitconfig.local  .gitignore  .shellcheckrc  .zshrc.sample  CLAUDE.md  LICENSE  Makefile  README.org  ai-strategy-and-leadership.org  aif-c01-notes.org  aws-services-overview.org  docker-compose.yml  project.clj  pyproject.toml  shell.nix
.beads/: interactions.jsonl
.cprr/: conjectures.json
.emacs.d/: init.el
aws-bedrock-rag/: README.org  basic_rag.py  bedrock_integration.py  contextual_bm25.py  contextual_embeddings.py  contextual_vector_db.py  evaluate_basic_rag.py  evaluate_contextual_bm25.py  evaluate_contextual_embeddings.py  load_contextual_data.py  load_data.py  rag_implementation.py  reranking.py  retrieve_github_data.py  setup.py  vector_db.py
dev/: user.clj
doc/: ai-strategy-and-leadership.org  aif-c01-notes.org  aws-ai-practitioner-course-outline.org  intro.md  intro.org  mla-c01-notes.org
elisp/: aws-ai-practice.el
practice-tests/: aif-c01-practice-01.org  aif-c01-practice-02.org  aif-c01-practice-03.org  aif-c01-practice-04.org  aif-c01-practice-05.org  ans-c01-practice-01.org  ans-c01-practice-02.org  ans-c01-practice-03.org  ans-c01-practice-04.org  ans-c01-practice-05.org  bds-c01-practice-01.org  bds-c01-practice-02.org  bds-c01-practice-03.org  bds-c01-practice-04.org  bds-c01-practice-05.org  dbs-c01-practice-01.org  dbs-c01-practice-02.org  dbs-c01-practice-03.org  dbs-c01-practice-04.org  dbs-c01-practice-05.org  dop-c02-practice-01.org  dop-c02-practice-02.org  dop-c02-practice-03.org  (+37 more)
scripts/: setup.sh  (+20 more)
(+31 files in other folders)
