[tool.poetry]
name = "aif-c01"
version = "0.1.0"
description = "AWS Certified AI Practitioner (AIF-C01) exam preparation"
authors = ["Jason Walsh <j@wal.sh>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
anthropic = "^0.34.1"
boto3 = "^1.35.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
