[tool.poetry]
name = "aif-c01"
version = "0.1.0"
description = "AWS Certified AI Practitioner (AIF-C01) exam preparation"
authors = ["Jason Walsh <j@wal.sh>"]
license = "MIT"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
anthropic = "^0.34.1"
boto3 = "^1.35.11"
pydantic = "^2.8.2"
openai = "^1.44.1"
chardet = "^5.2.0"
orgparse = "^0.4.20231004"
files-to-prompt = "^0.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyw?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist"]
extend-ignore = ["E203"]
